--- a/MoviemakerPathConverter.html
+++ b/MoviemakerPathConverter.html
@@ -77,7 +77,7 @@
       </div>
     </div>
     <br>
-    <a class="btn btn-success" id="save" style="display:none">Save Result</a>
+    <a class="btn btn-success" id="save" style="display:none">Save Result</a><br>
   </div>
 </body>
 <script>
