added testing link

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <a id="using" class="anchor" href="#using" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using</h3>
 
 <p>click on this link to start:</p>
+<a href="MPC.htm" class="button">Start</a>
 
 <h3>
 <a id="download" class="anchor" href="#download" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download</h3>
