--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           <h3>
 <a id="using" class="anchor" href="#using" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using</h3>
 
-<p>click on this link to start:
-<a href="MPC.htm" class="button">Start</a></p>
+<p>click on this link to start:<br>
+<a href="MPC.htm" style="border:1px black;">Start</a></p>
 
 <h3>
 <a id="download" class="anchor" href="#download" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download</h3>
