--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <h3>
 <a id="download" class="anchor" href="#download" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download</h3>
 
-<p>Feel free to download the prject via the github repo.</p>
+<p>Feel free to download the prject via the github repo. When it helped you, you can give it a star at github and share it.</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
